--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,3 +1,76 @@
-li {
-    text-transform: uppercase;
+.listTitles li:not(.contacts) {
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.listTitles li {
+  animation: list-entry 2s 1;
+}
+
+@keyframes list-entry {
+  from {
+    opacity: 0;
+    transform: translate3d(-3rem, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.listTitles li span {
+  opacity: 0.1;
+  transition: 0.5s;
+}
+
+.listTitles .reveal span {
+  opacity: 1;
+  cursor: default;
+}
+
+.listTitles li:hover span {
+  opacity: 1;
+  transition: 0.5s;
+}
+
+/* .brighten {
+  opacity: 1;
+  transition: 0.8s;
+}
+
+.fade {
+  opacity: 0.1;
+  transition: 0.8s;
+} */
+
+.titles:hover {
+  /* font-size: 20pt; */
+  /* padding: 0 10; */
+  /* transition: 0.5s; */
+  /* text-shadow: 0px 0px 15px white; */
+  /* background-color: #00000080; */
+  /* border-radius: 5px 0px 0px 5px; */
+  /* padding-left: 5px; */
+  /* opacity: 1; */
+}
+
+.contacts {
+    display: flex;
+    padding: 5px 0px;
+}
+
+.contacts a {
+    margin-right: 10px;
+    display: flex;
+}
+
+.contacts img {
+    align-self: center;
+}
+
+.contacts img:hover {
+    /* transition: 0.5s; */
+    /* box-shadow: inset 0px 0px 2px white, 0px 0px 10px white; */
 }
